# pyleiter

./: README.md  fix.sh  pyproject.toml  tox.ini
src/pyleiter/: __main__.py  cli.py  config.py  errors.py  runner.py
tests/: conftest.py  test_config.py  test_entrypoint.py  test_pyleiter.py  test_pyproject.toml
