[tool.poetry]
name = "pyleiter"
version = "0.1.0"
description = ""
authors = ["Paolo Rechia <paolorechia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
tox = "^4.15.1"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
